Sat Jun  7 22:15:02 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (VENDOR_DIR): use LIBDIR instead of PREFIX as well as
	  SITE_DIR.  a patch from Richard Brown <rbrown AT exherbo.org> in
	  [ruby-core:17129].

Sat Jun  7 21:37:58 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_f_open), re.c (rb_reg_search), transcode.c (str_transcode):
	  suppress warnings.

	* util.c (quorem, rv_alloc, nrv_alloc): only used in dtoa().

Sat Jun  7 16:06:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): append default flags.

Sat Jun  7 01:23:59 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_open_file, rb_io_s_sysopen): fmode should be unsigned int.
	  fixed [ruby-dev:34979]

Fri Jun  6 23:46:19 2008  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_callee_setup_arg): check simple flag before
	  calling setup_arg function().  this change reduce function call.

Fri Jun  6 21:51:46 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (COMMON_HEADERS): include ws2tcpip.h.

	* ext/socket/addrinfo.h (addrinfo, getaddrinfo, getnameinfo,
	  freehostent, freeaddrinfo): undef before define because these are
	  macros in some versions of Windows SDK.

	  merged from ruby_1_8.

Fri Jun  6 18:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/iconv/utils.rb (default_test): override not to croak.

Fri Jun  6 16:41:45 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: include ws2tcpip.h. fixed [ruby-Bugs-20528]

Fri Jun  6 15:05:02 2008  Tanaka Akira  <akr@fsij.org>

	* gc.c (count_objects): clear hash after counting objects.

Fri Jun  6 00:05:33 2008  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.xmlschema): don't use float.  fix
	  http://rubyforge.org/tracker/index.php?func=detail&group_id=426&atid=1698&aid=20504

Thu Jun  5 23:56:18 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_gc.rb: add tests to achieve over 90% test coverage of
	  gc.c.
