@@ -1,3 +1,8 @@
+Sat Jun  7 23:47:35 2008  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/zlib/zlib.c (rb_deflate_initialize, Init_zlib): Fix up
+	  initialize_copy; [ruby-list:45016].
+
 Sat Jun  7 22:15:02 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (VENDOR_DIR): use LIBDIR instead of PREFIX as well as
